# gaia_ai_doc_backend

./: .env.example.cache  .gitignore  9_INTERFACES_FIX_SUMMARY.md  ADVANCED_OPTIMIZATION_GUIDE.md  CACHE_FEATURE_README.md  CACHE_INTEGRATION_SUMMARY.md  CLAUDE.md  DEDUPLICATION_IMPROVEMENTS_SUMMARY.md  DEEPSEEK_INTEGRATION_REPORT.md  FIX_SUMMARY.md  PARALLEL_OPTIMIZATION_SUMMARY.md  PRD_CONTENT_FILTERING_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  STUDIO_GUIDE.md  ULTIMATE_OPTIMIZATION_GUIDE.md  UNDERSTAND_DOC_TEST_REPORT.md  app.py  apply_flow_patch_design.md  async_optimization_test_results.json  config.py  debug_context_extraction.py  debug_understand_doc.py  deepseek_client.py  deepseek_client_simple.py  demo.md  direct_integration_test_result.json  feishu_auth.py  feishu_client.py  feishu_func.md  langgraph.json  llm_query_opt.md  main.py  parallel_processing_test_results.json  plan_from_ism_steps.md  pyproject.toml  rag_demo.md  server.py  start-langgraph-dev.bat  (+30 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
cache/: document_cache.json
cache_test/: document_cache.json
client/: __init__.py  deepseek_client.py  feishu_client.py
mock/: __init__.py  mcp_client.py
models/: state.py
nodes/: apply_flow_patch.py  fetch_feishu_doc.py  finalize.py  ingest_input.py  normalize_and_validate_ism.py  plan_from_ism.py  split_document.py  understand_doc.py  understand_doc_async.py  understand_doc_original.py  understand_doc_parallel.py  understand_doc_refactored.py  (+2 more)
(+14 files in other folders)
